--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -82,6 +82,12 @@
                 content: 'ABOUT';
             }
         }
+
+        a.folder-link {
+            &:after {
+                content: 'PROJECTS';
+            }
+        }
     
         a.contact-link {
             &:after {
