--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -73,3 +73,38 @@
         transform: rotateX(90deg);
     }
 }
+
+@media screen and (max-width: 1200px) {
+    .stage-cube-cont {
+        position: relative;
+        width: 100%;
+        height: 300px;
+        overflow: visible;
+        margin: 0;
+    }
+    
+
+    .cubespinner {
+        animation-name: spincube;
+        animation-timing-function: ease-in-out;
+        animation-iteration-count: infinite;
+        animation-duration: 12s;
+        transform-style: preserve-3d;
+        transform-origin: 100px 100px 0;
+        margin-left: calc(50% - 100px);
+    
+        div {
+            position: absolute;
+            width: 200px;
+            height: 200px;
+            border: 1px solid #ccc;
+            background: rgba(255, 255, 255, 0.9);
+            text-align: center;
+            font-size: 150px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0 0 20px 0rem lightyellow;
+        }
+    }
+}
