--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -61,7 +61,6 @@
             left: 10px;
 
             &::before {
-                content: '<h1>';
                 font-family: 'La Belle Aurore';
                 font-size: 18px;
                 position: absolute;
@@ -72,7 +71,6 @@
             }
 
             &::after {
-                content: '<h1/>';
                 font-family: 'La Belle Aurore';
                 font-size: 18px;
                 line-height: 18px;
@@ -112,3 +110,60 @@
         }
     }
 }
+
+@media screen and (max-width: 1200px) {
+    .page {
+      position: initial;
+      padding: 0;
+    }
+  
+    .container {
+      position: initial;
+      height: auto;
+      min-height: auto;
+      padding: 0;
+  
+      &.contact-page,
+      &.about-page,
+      &.portfolio-page {
+        display: inline-block;
+        position: relative;
+        overflow: scroll;
+
+        .text-zone {
+          position: relative;
+          transform: none;
+          width: 80%;
+          padding: 0;
+          display: block;
+          box-sizing: border-box;
+        }
+      }
+  
+      &.portfolio-page {
+        width: 100%;
+        padding: 20px;
+        box-sizing: border-box;
+  
+        h1.page-title {
+          margin-left: 20px;
+          margin-top: 20px;
+        }
+  
+        .image-box {
+          height: 200px;
+          max-width: calc(50% - 10px);
+        }
+      }
+    }
+  
+    // .stage-cube-cont {
+    //   position: absolute;
+    //   width: 100%;
+    //   height: 0%;
+    //   left: 0;
+    //   bottom: 0;
+    //   overflow: visible;
+    //   display: inline-block;
+    // }
+  }
