Started portfolio page and some minor stlye tweaks

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -6,6 +6,7 @@
         transform: translateY(-50%);
         width: 80%;
         max-height: 90%;
+        white-space: break-spaces;
     }
     
     h1 {
