--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -122,6 +122,7 @@
       height: auto;
       min-height: auto;
       padding: 0;
+      white-space: break-spaces;
   
       &.contact-page,
       &.about-page,
