--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -27,7 +27,7 @@
         display: block;
         text-align: center;
         position: absolute;
-        height: 210px;
+        height: 0%;
         top: 50%;
         margin-top: -120px;
         width: 100%;
@@ -126,7 +126,7 @@
     }
 }
 
-.hamburger-icon, .close-icon {
+.menu-open-close-icon {
     display: none;
   }
 
@@ -146,19 +146,25 @@
         top: 0;
         left: 0;
         background: #181818;
-        height: 100%;
         margin: 0;
         z-index: 2;
         position: fixed;
-  
+
         &.mobile-show {
-          display: block;
+            animation: slideDown 0.7s forwards;
+            display: block;
+        }
+    
+        &.mobile-hide {
+            animation: slideUp 0.7s forwards;
+            display: block;
         }
   
         a {
           display: flex;
           justify-content: center;
           align-items: center;
+          color:#ffd700;
         }
   
         a:after {
@@ -173,12 +179,35 @@
         }
        }
   
-       .hamburger-icon,
-       .close-icon {
+       .menu-open-close-icon {
           position: absolute;
           top: 15px;
           right: 15px;
           display: block;
+          z-index: 3;
        }
     }
+
+    @keyframes slideDown {
+        from {
+          height: 0;
+          opacity: 0;
+        }
+        to {
+          height: auto;
+          opacity: 1;
+        }
+      }
+    
+      /* Define the animation for closing the menu */
+      @keyframes slideUp {
+        from {
+          height: auto;
+          opacity: 1;
+        }
+        to {
+          height: 0;
+          opacity: 0;
+        }
+      }
   }
